pkggroup("mds") {
  deps = [ ":kernel" ]
}

config("mds_device_config") {
  include_dirs = [ "inc" ]
}

source_set("mds_device") {
  sources = [ "src/mds_dev.c" ]

  sources += [
    "src/dev_adc.c",
    "src/dev_gpio.c",
    "src/dev_i2c.c",
    "src/dev_i2s.c",
    "src/dev_led.c",
    "src/dev_qspi.c",
    "src/dev_rtc.c",
    "src/dev_spi.c",
    "src/dev_storage.c",
    "src/dev_timer.c",
    "src/dev_uart.c",
  ]

  sources += [
    "src/extend/dev_fpga.c",
    "src/extend/dev_ntc.c",
  ]

  public_configs = [ ":mds_device_config" ]

  public_deps = [ ":mds" ]
}
