declare_args() {
  mds_component_lpc_statistic = false
}

pkggroup("mds") {
  deps = [ ":kernel" ]
}

config("mds_component_lpc_config") {
  include_dirs = [ "./" ]
}

source_set("mds_component_lpc") {
  sources = [ "mds_lpc.c" ]

  defines = []

  if (defined(mds_component_lpc_statistic) && mds_component_lpc_statistic) {
    defines += [ "MDS_LPC_STATISTIC" ]
  }

  public_configs = [ ":mds_component_lpc_config" ]

  public_deps = [ ":mds" ]
}
