declare_args() {
  mds_systemview_trace_isr = false
  mds_systemview_trace_ipc = true
  mds_systemview_trace_mem = true
}

pkggroup("utils/segger_systemview") {
  deps = [ ":segger_systemview" ]
}

source_set("mds_component_systemview") {
  sources = [ "mds_systemview.c" ]

  defines = []

  if (defined(mds_systemview_trace_isr) && mds_systemview_trace_isr) {
    defines += [ "MDS_SYSTEMVIEW_TRACE_ISR=1" ]
  }
  if (defined(mds_systemview_trace_ipc) && mds_systemview_trace_ipc) {
    defines += [ "MDS_SYSTEMVIEW_TRACE_IPC=1" ]
  }
  if (defined(mds_systemview_trace_mem) && mds_systemview_trace_mem) {
    defines += [ "MDS_SYSTEMVIEW_TRACE_MEM=1" ]
  }

  deps = [ "../../kernel/:mds_kernel" ]

  public_deps = [ ":utils/segger_systemview" ]
}
