declare_args() {
  # chip_gd32vf103_without_interrupt = false
}

pkggroup("mds") {
  deps = [ ":device" ]
}

pkggroup("chip/gd32vf103") {
  deps = [ ":gd32vf103_firmware" ]
}

config("chip_gd32vf103_config") {
  include_dirs = [ "inc/" ]
  defines = []
}

source_set("chip_gd32vf103_driver") {
  sources = [ "src/startup_gd32vf103.c" ]

  public_configs = [ ":chip_gd32vf103_config" ]

  public_deps = [
    ":chip/gd32vf103",
    ":mds",
  ]
}
