declare_args() {
  # drv_chip_gd32vf103_without_interrupt = false
}

pkggroup("gd32vf103_firmware") {
  deps = [ ":gd32vf103_firmware" ]
}

pkggroup("mds") {
  deps = [ ":device" ]
}

config("drv_chip_gd32vf103_config") {
  include_dirs = [ "inc/" ]
  defines = []
}

source_set("drv_chip_gd32vf103") {
  sources = [ "src/startup_gd32vf103.c" ]

  public_configs = [ ":drv_chip_gd32vf103_config" ]

  public_deps = [
    ":gd32vf103_firmware",
    ":mds",
  ]
}
