declare_args() {
  drv_chip_stm32f1xx_without_interrupt = true
}

pkggroup("stm32f1xx_hal_driver") {
  deps = [ ":stm32f1xx_hal_driver" ]
}

pkggroup("mds") {
  deps = [ ":device" ]
}

config("drv_chip_stm32f1xx_config") {
  include_dirs = [ "inc/" ]
  defines = []
  if (defined(drv_chip_stm32f1xx_without_interrupt) &&
      drv_chip_stm32f1xx_without_interrupt) {
    defines += [ "DRV_CHIP_STM32F1XX_WITHOUT_INTERRUPT=1" ]
  }
}

source_set("drv_chip_stm32f1xx") {
  sources = [
    "src/drv_gpio.c",
    "src/drv_i2c.c",
    "src/startup_stm32f1xx.c",
  ]

  public_configs = [ ":drv_chip_stm32f1xx_config" ]

  public_deps = [
    ":mds",
    ":stm32f1xx_hal_driver",
  ]
}
