declare_args() {
  chip_stm32h7xx_without_interrupt = false
}

pkggroup("chip/stm32h7xx") {
  deps = [ "stm32h7xx_hal_driver/:stm32h7xx_hal_driver_ll" ]
}

config("chip_stm32h7xx_config") {
  include_dirs = [ "inc/" ]
  defines = []
  if (defined(chip_stm32h7xx_without_interrupt) &&
      chip_stm32h7xx_without_interrupt) {
    defines += [ "CHIP_STM32H7XX_WITHOUT_INTERRUPT=1" ]
  }
}

source_set("chip_stm32h7xx_driver") {
  sources = [ "src/startup_stm32h7xx.c" ]

  public_configs = [ ":chip_stm32h7xx_config" ]

  public_deps = [
    ":chip/stm32h7xx",
    "../../../device:mds_device",
  ]
}
