declare_args() {
  drv_chip_stm32h7xx_without_interrupt = false
}

pkggroup("stm32h7xx_hal_driver") {
  deps = [ ":stm32h7xx_hal_driver_ll" ]
}

pkggroup("mds") {
  deps = [ ":device" ]
}

config("drv_chip_stm32h7xx_config") {
  include_dirs = [ "inc/" ]
  defines = []
  if (defined(drv_chip_stm32h7xx_without_interrupt) &&
      drv_chip_stm32h7xx_without_interrupt) {
    defines += [ "DRV_CHIP_STM32H7XX_WITHOUT_INTERRUPT=1" ]
  }
}

source_set("drv_chip_stm32h7xx") {
  sources = [ "src/startup_stm32h7xx.c" ]

  public_configs = [ ":drv_chip_stm32h7xx_config" ]

  public_deps = [
    ":mds",
    ":stm32h7xx_hal_driver",
  ]
}
