pkggroup("mds_device") {
  package = "mds"
  deps = [ ":device" ]
}

config("mds_driver_simulate_led_config") {
  include_dirs = [ "./" ]
}

source_set("mds_driver_simulate_led") {
  sources = [ "drv_led_simulate.c" ]

  public_configs = [ ":mds_driver_simulate_led_config" ]

  public_deps = [ ":mds_device" ]
}
