declare_args() {
  mds_lpc_config_file = ""

  mds_lpc_log_level = "MDS_LOG_LEVEL_INF"
}

config("mds_lpc_cfg") {
  defines = [ "CONFIG_MDS_LPC_LOG_LEVEL=${mds_lpc_log_level}" ]

  if (defined(mds_lpc_co_nfig_file) && mds_lpc_config_file != "") {
    defines += [ "CONFIGMDS_LPC_CONFIG_FILE=\"$(mds_lpc_config_file)\"" ]
  }
}

source_set("mds_lpc") {
  sources = [ "mds_lpc.c" ]

  public_configs = [
    ":mds_lpc_cfg",
    "../:component_cfg",
  ]
}
